review feedback.
Signed-off-by: Paul Harris <paul.harris@consensys.net>